[project]
name = "osc-tap"
version = "0.1.0"
description = "OSC sequence capture wrapper - tap into terminal OSC sequences"
readme = "README.md"
license = "BSD-3-Clause"
authors = [
    { name = "@yosagi" }
]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
osc-tap = "osc_tap:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
